# tess-decomb

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: explainer.html  make_figures.py
tess_decomb/: __init__.py  check.py  lightcurve.py  sysrem.py
validation/: README.md  V1_RESULTS.md  V2_RESULTS.md  V4_V5_RESULTS.md  V6_RESULTS.md  V7_RESULTS.md  survey_verdicts.csv  v1_holdout_k_sectors.csv  v1_verdict_stability.csv  v2_injections.csv  v3_null_test.csv  v5_bootstrap.csv  v6_validity.csv  v7_joint_injections.csv
validation/scripts/: v1_holdout_k.py  v2_injection_campaign.py  v4_heldout_split.py  v4_v5_robustness.py  v6_validity_domain.py  v7_joint_fit.py
